@@ -1,3 +1,8 @@
+2003-02-03  Jakub Jelinek  <jakub@redhat.com>
+
+	* sysdeps/unix/sysv/linux/sparc/sparc32/vfork.S (__vfork): If
+	BROKEN_SPARC_WDISP22, handle SHARED the same way as non-SHARED.
+
 2003-02-04  Andreas Jaeger  <aj@suse.de>
 
 	* sysdeps/unix/sysv/linux/hppa/pt-initfini.c: Do not use
